--- a/unstable/libp2p/crypto/chacha20poly1305.html
+++ b/unstable/libp2p/crypto/chacha20poly1305.html
@@ -269,9 +269,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L30"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L33"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L30" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L33" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -281,9 +281,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L31"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L34"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L31" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L34" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -293,9 +293,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L32"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L35"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L32" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L35" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -305,9 +305,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L33"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L36"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L33" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L36" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -319,67 +319,65 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="decrypt,type[ChaChaPoly],ChaChaPolyKey,ChaChaPolyNonce,ChaChaPolyTag,openArray[byte],openArray[byte]" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#decrypt%2Ctype%5BChaChaPoly%5D%2CChaChaPolyKey%2CChaChaPolyNonce%2CChaChaPolyTag%2CopenArray%5Bbyte%5D%2CopenArray%5Bbyte%5D"><span class="Identifier">decrypt</span></a><span class="Other">(</span><span class="Operator">_</span><span class="Other">:</span> <span class="Identifier">type</span><span class="Other">[</span><a href="chacha20poly1305.html#ChaChaPoly"><span class="Identifier">ChaChaPoly</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">key</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyKey"><span class="Identifier">ChaChaPolyKey</span></a><span class="Other">;</span> <span class="Identifier">nonce</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyNonce"><span class="Identifier">ChaChaPolyNonce</span></a><span class="Other">;</span>
              <span class="Identifier">tag</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="chacha20poly1305.html#ChaChaPolyTag"><span class="Identifier">ChaChaPolyTag</span></a><span class="Other">;</span> <span class="Identifier">data</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">;</span>
-             <span class="Identifier">aad</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+             <span class="Identifier">aad</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L75"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L78"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L78" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="encrypt,type[ChaChaPoly],ChaChaPolyKey,ChaChaPolyNonce,ChaChaPolyTag,openArray[byte],openArray[byte]" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encrypt%2Ctype%5BChaChaPoly%5D%2CChaChaPolyKey%2CChaChaPolyNonce%2CChaChaPolyTag%2CopenArray%5Bbyte%5D%2CopenArray%5Bbyte%5D"><span class="Identifier">encrypt</span></a><span class="Other">(</span><span class="Operator">_</span><span class="Other">:</span> <span class="Identifier">type</span><span class="Other">[</span><a href="chacha20poly1305.html#ChaChaPoly"><span class="Identifier">ChaChaPoly</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">key</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyKey"><span class="Identifier">ChaChaPolyKey</span></a><span class="Other">;</span> <span class="Identifier">nonce</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyNonce"><span class="Identifier">ChaChaPolyNonce</span></a><span class="Other">;</span>
              <span class="Identifier">tag</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="chacha20poly1305.html#ChaChaPolyTag"><span class="Identifier">ChaChaPolyTag</span></a><span class="Other">;</span> <span class="Identifier">data</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">;</span>
-             <span class="Identifier">aad</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+             <span class="Identifier">aad</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L51"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L54"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L51" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L54" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="intoChaChaPolyKey,openArray[byte]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#intoChaChaPolyKey%2CopenArray%5Bbyte%5D"><span class="Identifier">intoChaChaPolyKey</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyKey"><span class="Identifier">ChaChaPolyKey</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#intoChaChaPolyKey%2CopenArray%5Bbyte%5D"><span class="Identifier">intoChaChaPolyKey</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyKey"><span class="Identifier">ChaChaPolyKey</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L35"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L38"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L35" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L38" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="intoChaChaPolyNonce,openArray[byte]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#intoChaChaPolyNonce%2CopenArray%5Bbyte%5D"><span class="Identifier">intoChaChaPolyNonce</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyNonce"><span class="Identifier">ChaChaPolyNonce</span></a> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L39"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L39" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="intoChaChaPolyTag,openArray[byte]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#intoChaChaPolyTag%2CopenArray%5Bbyte%5D"><span class="Identifier">intoChaChaPolyTag</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyTag"><span class="Identifier">ChaChaPolyTag</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">proc</span> <a href="#intoChaChaPolyNonce%2CopenArray%5Bbyte%5D"><span class="Identifier">intoChaChaPolyNonce</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyNonce"><span class="Identifier">ChaChaPolyNonce</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L43"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L42"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L43" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L42" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="intoChaChaPolyTag,openArray[byte]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#intoChaChaPolyTag%2CopenArray%5Bbyte%5D"><span class="Identifier">intoChaChaPolyTag</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chacha20poly1305.html#ChaChaPolyTag"><span class="Identifier">ChaChaPolyTag</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/crypto/chacha20poly1305.nim#L46"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/chacha20poly1305.nim#L46" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -393,7 +391,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-02 17:09:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-03 11:35:43 UTC</small>
       </div>
     </div>
   </div>
